--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                         </div>
                     </a>
                     <a href="tools/age-calculator.html" class="tool-card">
+                        <span class="tool-badge badge-updated">Updated</span>
                         <div class="tool-icon"><i class="fa-solid fa-calendar-days"></i></div>
                         <div class="tool-details">
                             <h3>Age Calculator</h3>
