--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <main class="content" id="main-content">
                 <div class="tools-grid">
                     <a href="tools/remove-tags-comma.html" class="tool-card">
-                        <span class="tool-badge badge-new">New</span>
+                        <span class="tool-badge badge-updated">Updated</span>
                         <div class="tool-icon"><i class="fa-solid fa-tag"></i></div>
                         <div class="tool-details">
                             <h3>Remove Tags Comma</h3>
@@ -144,6 +144,7 @@
                         </div>
                     </a>
                     <a href="tools/add-hash-tags.html" class="tool-card">
+                        <span class="tool-badge badge-updated">Updated</span>
                         <div class="tool-icon"><i class="fa-solid fa-hashtag"></i></div>
                         <div class="tool-details">
                             <h3>Add Hash Tags</h3>
@@ -151,7 +152,7 @@
                         </div>
                     </a>
                     <a href="tools/gemini-ai-tool.html" class="tool-card">
-                        <span class="tool-badge badge-trending">Trending</span>
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fa-solid fa-microchip"></i></div>
                         <div class="tool-details">
                             <h3>Gemini AI Tool</h3>
@@ -167,7 +168,7 @@
                         </div>
                     </a>
                     <a href="tools/resume-builder.html" class="tool-card">
-                        <span class="tool-badge badge-new">New</span>
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fa-solid fa-user-pen"></i></div>
                         <div class="tool-details">
                             <h3>Resume Builder</h3>
@@ -175,7 +176,7 @@
                         </div>
                     </a>
                     <a href="tools/youtube-downloader.html" class="tool-card">
-                        <span class="tool-badge badge-updated">Updated</span>
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fab fa-youtube"></i></div>
                         <div class="tool-details">
                             <h3>Youtube Downloader</h3>
@@ -183,6 +184,7 @@
                         </div>
                     </a>
                     <a href="tools/youtube-thumbnail-downloader.html" class="tool-card">
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fab fa-youtube"></i></div>
                         <div class="tool-details">
                             <h3>YT Thumb Downloader</h3>
@@ -190,6 +192,7 @@
                         </div>
                     </a>
                     <a href="tools/sitemap-generator.html" class="tool-card">
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fa-solid fa-sitemap"></i></div>
                         <div class="tool-details">
                             <h3>Sitemap Generator</h3>
@@ -197,7 +200,7 @@
                         </div>
                     </a>
                     <a href="tools/rotate-video.html" class="tool-card">
-                        <span class="tool-badge badge-new">New</span>
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fa-solid fa-video"></i></div>
                         <div class="tool-details">
                             <h3>Video Rotate</h3>
@@ -212,6 +215,7 @@
                         </div>
                     </a>
                     <a href="tools/qr-code-generator.html" class="tool-card">
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fas fa-qrcode"></i></div>
                         <div class="tool-details">
                             <h3>QR Code Generator</h3>
@@ -219,7 +223,7 @@
                         </div>
                     </a>
                     <a href="tools/text-to-speech.html" class="tool-card">
-                        <span class="tool-badge badge-trending">Trending</span>
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fas fa-volume-up"></i></div>
                         <div class="tool-details">
                             <h3>Text to Speech</h3>
@@ -227,7 +231,7 @@
                         </div>
                     </a>
                     <a href="tools/background-remover.html" class="tool-card">
-                        <span class="tool-badge badge-trending">Trending</span>
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fas fa-cut"></i></div>
                         <div class="tool-details">
                             <h3>Background Remover</h3>
@@ -251,6 +255,7 @@
                         </div>
                     </a>
                     <a href="tools/image-resizer.html" class="tool-card">
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fas fa-file-audio"></i></div>
                         <div class="tool-details">
                             <h3>Image Resizer</h3>
@@ -258,6 +263,7 @@
                         </div>
                     </a>
                     <a href="tools/pdf-to-word.html" class="tool-card">
+                        <span class="tool-badge badge-beta">Beta</span>
                         <div class="tool-icon"><i class="fas fa-edit"></i></div>
                         <div class="tool-details">
                             <h3>PDF To Word</h3>
