--- a/tools/resume-builder.html
+++ b/tools/resume-builder.html
@@ -207,7 +207,6 @@
   }
 </style>
 <div class="container1">
-  <h1>Bio-Data Generator</h1>
   <form id="bioDataForm">
     <div style="display: flex; gap: 20px;">
       <div style="flex: 1;">
@@ -248,6 +247,7 @@
   </form>
 
   <div id="bioDataOutput" class="bio-data">
+  <h2>Generated Resume</h2>
     <div class="two-column">
       <div>
         <p><strong>Name:</strong> <span id="outputName"></span></p>
