--- a/tools/resume-builder.html
+++ b/tools/resume-builder.html
@@ -131,18 +131,6 @@
     border-radius: 4px;
   }
 
-  button {
-    padding: 10px 20px;
-    background-color: #28a745;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-
-  button:hover {
-    background-color: #218838;
-  }
 
   .button-group {
     display: flex;
@@ -207,6 +195,7 @@
   }
 </style>
 <div class="container1">
+  <h1>Bio-Data Generator</h1>
   <form id="bioDataForm">
     <div style="display: flex; gap: 20px;">
       <div style="flex: 1;">
@@ -247,7 +236,7 @@
   </form>
 
   <div id="bioDataOutput" class="bio-data">
-  <h2>Generated Resume</h2>
+    <h2>Generated Bio-Data</h2>
     <div class="two-column">
       <div>
         <p><strong>Name:</strong> <span id="outputName"></span></p>
