--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         </div>
                     </a>
                     <a href="tools/resume-builder.html" class="tool-card">
-                        <span class="tool-badge badge-beta">Beta</span>
+                        <span class="tool-badge badge-updated">Updated</span>
                         <div class="tool-icon"><i class="fa-solid fa-user-pen"></i></div>
                         <div class="tool-details">
                             <h3>Resume Builder</h3>
