--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         </div>
                     </a>
                     <a href="tools/rotate-video.html" class="tool-card">
-                        <span class="tool-badge badge-beta">Beta</span>
+                        <span class="tool-badge badge-updated">Updated</span>
                         <div class="tool-icon"><i class="fa-solid fa-video"></i></div>
                         <div class="tool-details">
                             <h3>Video Rotate</h3>
