--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         </div>
                     </a>
                     <a href="tools/youtube-thumbnail-downloader.html" class="tool-card">
-                        <span class="tool-badge badge-beta">Beta</span>
+                        <span class="tool-badge badge-updated">Updated</span>
                         <div class="tool-icon"><i class="fab fa-youtube"></i></div>
                         <div class="tool-details">
                             <h3>YT Thumb Downloader</h3>
