--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                         </div>
                     </a>
                     <a href="tools/loan-calculator.html" class="tool-card">
+                        <span class="tool-badge badge-updated">Updated</span>
                         <div class="tool-icon"><i class="fas fa-file-pdf"></i></div>
                         <div class="tool-details">
                             <h3>Loan Calculator</h3>
